fixed the alignment

--- a/week01/index.css
+++ b/week01/index.css
@@ -3,8 +3,11 @@ body {
     'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   color: rgb(238, 255, 0);
   font-size: 20px;
-  text-align: center;
 }
 html {
   background-color: rgb(114, 0, 180);
+}
+#title,
+#Author {
+  text-align: center;
 }
